--- a/app/src/main/res/layout/activity_choose_clinic.xml
+++ b/app/src/main/res/layout/activity_choose_clinic.xml
@@ -7,7 +7,7 @@
     tools:context="tomorrow.ntu.edu.sg.hospitalbees.ChooseClinic">
 
     <android.support.v4.widget.SwipeRefreshLayout
-        android:id="@+id/swipe_refresh_choose_clinic"
+        android:id="@+id/swipe_refresh_hospitals"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -19,11 +19,26 @@
 
     </android.support.v4.widget.SwipeRefreshLayout>
     
-    <ProgressBar
-        android:id="@+id/pb_load_hospitals"
+    <TextView
+        android:id="@+id/tv_error_fetch_clinic"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:padding="16dp"
         android:layout_gravity="center"
-        android:visibility="invisible"/>
+        android:textAlignment="center"
+        android:text="@string/error_fetching_clinic"
+        android:textSize="34sp"
+        android:visibility="invisible" />
+
+    <TextView
+        android:id="@+id/tv_no_clinic"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="16dp"
+        android:layout_gravity="center"
+        android:textAlignment="center"
+        android:text="@string/no_open_clinic"
+        android:textSize="34sp"
+        android:visibility="invisible" />
 
 </FrameLayout>
