--- a/app/src/main/res/layout/clinic_card_layout.xml
+++ b/app/src/main/res/layout/clinic_card_layout.xml
@@ -5,9 +5,11 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:id="@+id/clinic_card_view"
-    android:layout_margin="16dp"
-    card_view:cardElevation="2dp"
-    card_view:contentPadding="8dp"
+    android:layout_marginTop="16dp"
+    android:layout_marginLeft="16dp"
+    android:layout_marginRight="16dp"
+    card_view:cardElevation="3dp"
+    card_view:contentPadding="16dp"
     android:foreground="?selectableItemBackground"
     android:clickable="true"
     android:focusable="true"
@@ -16,7 +18,6 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="8dp"
         >
 
         <TextView
