--- a/app/src/main/res/layout/booking_history_list_item.xml
+++ b/app/src/main/res/layout/booking_history_list_item.xml
@@ -1,43 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="50dp"
-    android:id="@+id/recent_card_view"
-    android:layout_margin="5dp"
-    card_view:cardElevation="2dp"
-    card_view:contentPadding="8dp"
-    android:foreground="?selectableItemBackground"
-    android:clickable="true"
-    android:focusable="true"
-    >
+    android:layout_height="wrap_content"
+    android:paddingLeft="24dp"
+    android:paddingRight="24dp"
+    android:clickable="false"
+    android:focusable="true" >
 
-    <RelativeLayout
+    <TextView
+        android:id="@+id/tv_history_hospital_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="5dp"
-        >
+        android:paddingTop="8dp"
+        android:textSize="20sp" />
 
-        <TextView
-            android:layout_width="250dp"
-            android:layout_height="wrap_content"
-            android:id="@+id/recent_cv_title"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:textSize="15sp"
-            />
+    <TextView
+        android:id="@+id/tv_history_booking_date"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_below="@id/tv_history_hospital_name"
+        android:paddingTop="4dp"
+        android:textSize="14sp" />
 
-        <TextView
-            android:layout_width="100dp"
-            android:layout_height="wrap_content"
-            android:id="@+id/recent_cv_date"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true"
-            android:textSize="12sp"
-            />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/tv_history_booking_status"
+        android:paddingTop="4dp"
+        android:textSize="14sp"
+        android:layout_alignParentEnd="true"
+        android:layout_below="@id/tv_history_hospital_name"/>
+
+    <!--This View serves as a visual divider between list items-->
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#dadada"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp" />
 
 
-
-    </RelativeLayout>
-
-</android.support.v7.widget.CardView>
+</RelativeLayout>
