Changed Location url

--- a/app/src/main/res/layout/activity_location_duration.xml
+++ b/app/src/main/res/layout/activity_location_duration.xml
@@ -7,60 +7,24 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="vastav.chin.srivastava.googlematrixapi_demo.MainActivity">
+    tools:context="tomorrow.ntu.edu.sg.hospitalbees.LocationDuration">
 
-    <!--<Button-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:text="@string/txt_btn"-->
-        <!--android:id="@+id/button_get"-->
-        <!--android:layout_alignParentBottom="true"-->
-        <!--android:layout_centerHorizontal="true" />-->
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/next"
+        android:id="@+id/move_to_choose_clinic_button"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:onClick="moveToChooseClinicButton"/>
 
-    <!--<TextView-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:id="@+id/textView_info"-->
-        <!--android:layout_alignParentLeft="true"-->
-        <!--android:layout_alignParentStart="true"-->
-        <!--android:text="@string/str_info"-->
-        <!--android:textAppearance="?android:attr/textAppearanceSmall" />-->
-
-    <!--<EditText-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:id="@+id/editText_from"-->
-        <!--android:hint="@string/txt_start"-->
-        <!--android:layout_below="@+id/textView_info"-->
-        <!--android:layout_marginTop="20dp"-->
-        <!--android:textStyle="italic"-->
-        <!--android:layout_alignParentLeft="true"-->
-        <!--android:layout_alignParentStart="true" />-->
-
-    <!--<EditText-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:id="@+id/editText_to"-->
-        <!--android:hint="@string/txt_dstn"-->
-        <!--android:layout_below="@+id/editText_from"-->
-        <!--android:textStyle="italic"-->
-        <!--android:layout_alignParentLeft="true"-->
-        <!--android:layout_alignParentStart="true" />-->
-
-    <!--<TextView-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:id="@+id/textView_result2"-->
-        <!--android:layout_above="@+id/textView_result1"-->
-        <!--android:layout_alignParentLeft="true"-->
-        <!--android:layout_alignParentStart="true" />-->
-    <!--<TextView-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:id="@+id/textView_result1"-->
-        <!--android:layout_centerVertical="true"-->
-        <!--android:layout_marginTop="5dp"-->
-        <!--android:layout_alignParentLeft="true"-->
-        <!--android:layout_alignParentStart="true" />-->
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/text_for_notice"
+        android:text="@string/notice_text"
+        android:textAlignment="center"
+        android:layout_centerVertical="true"
+        android:textSize="24sp" />
 
 </RelativeLayout>
