--- a/app/src/main/res/layout/activity_booking_history.xml
+++ b/app/src/main/res/layout/activity_booking_history.xml
@@ -1,21 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/swipe_refresh_booking_history"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="16dp"
     tools:context="tomorrow.ntu.edu.sg.hospitalbees.BookingHistory"
     tools:showIn="@layout/activity_booking_history">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recyclerview"
         android:foregroundGravity="center_horizontal"
-        android:layout_marginTop="16dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
     </android.support.v7.widget.RecyclerView>
 
-
-</RelativeLayout>
+</android.support.v4.widget.SwipeRefreshLayout>
