--- a/app/src/main/res/layout/booking_history_list_item.xml
+++ b/app/src/main/res/layout/booking_history_list_item.xml
@@ -2,16 +2,17 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingLeft="24dp"
-    android:paddingRight="24dp"
     android:clickable="false"
-    android:focusable="true" >
+    android:focusable="true"
+    android:paddingLeft="16dp"
+    android:paddingRight="16dp">
 
     <TextView
         android:id="@+id/tv_history_hospital_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingTop="8dp"
+        android:paddingTop="4dp"
+        android:layout_marginStart="8dp"
         android:textSize="20sp" />
 
     <TextView
@@ -19,15 +20,20 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
+        android:layout_marginStart="8dp"
         android:layout_below="@id/tv_history_hospital_name"
         android:paddingTop="4dp"
+        android:paddingBottom="4dp"
         android:textSize="14sp" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
         android:id="@+id/tv_history_booking_status"
+        android:textColor="@color/colorAccent"
         android:paddingTop="4dp"
+        android:paddingBottom="4dp"
         android:textSize="14sp"
         android:layout_alignParentEnd="true"
         android:layout_below="@id/tv_history_hospital_name"/>
@@ -36,9 +42,7 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="#dadada"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp" />
+        android:background="#dadada" />
 
 
 </RelativeLayout>
