--- a/app/src/main/res/layout/activity_my_queue.xml
+++ b/app/src/main/res/layout/activity_my_queue.xml
@@ -59,11 +59,11 @@
 
     <TextView
         android:id="@+id/tv_queue_number_value"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="46dp"
         android:textAlignment="center"
-        android:textSize="86sp"
+        android:textSize="72sp"
         app:layout_constraintTop_toBottomOf="@id/tv_queue_number_label"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
