--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -69,8 +69,21 @@
         android:text="@string/view_faq"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/viewAlerts"
+        app:layout_constraintBottom_toTopOf="@+id/viewMap"
         android:onClick="viewFAQButton" />
+
+    <Button
+        android:id="@+id/viewMap"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginBottom="8dp"
+        android:text="Map of dengue clusters"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/viewAlerts"
+        android:onClick="viewMap" />
 
     <Button
         android:id="@+id/viewAlerts"
