--- a/app/src/main/res/layout/activity_alerts.xml
+++ b/app/src/main/res/layout/activity_alerts.xml
@@ -7,7 +7,7 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         xmlns:tools="http://schemas.android.com/tools"
-        tools:context="tomorrow.ntu.edu.sg.hospitalbees.Alerts">
+        tools:context="tomorrow.ntu.edu.sg.hospitalbees.ui.Alerts">
 
 
         <TextView
