--- a/app/src/main/res/layout/activity_booking_history.xml
+++ b/app/src/main/res/layout/activity_booking_history.xml
@@ -5,7 +5,7 @@
     android:id="@+id/swipe_refresh_booking_history"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="tomorrow.ntu.edu.sg.hospitalbees.BookingHistory"
+    tools:context="tomorrow.ntu.edu.sg.hospitalbees.ui.BookingHistory"
     tools:showIn="@layout/activity_booking_history">
 
     <android.support.v7.widget.RecyclerView
